tests/expectations/parser-statement/unreachable/postfix_fail.out
Error [EPAR0370005]: expected : -- found '='
    --> test_0:1:7
     |
   1 | let x = a;;
     |       ^


Error [EPAR0370005]: expected : -- found '='
    --> test_1:1:7
     |
   1 | let x = a.;
     |       ^


Error [EPAR0370005]: expected : -- found '='
    --> test_2:1:7
     |
   1 | let x = a,;
     |       ^


Error [EPAR0370005]: expected : -- found '='
    --> test_3:1:7
     |
   1 | let x = a[;
     |       ^


Error [EPAR0370005]: expected : -- found '='
    --> test_4:1:7
     |
   1 | let x = a];
     |       ^


Error [EPAR0370005]: expected : -- found '='
    --> test_5:1:7
     |
   1 | let x = a{;
     |       ^


Error [EPAR0370005]: expected : -- found '='
    --> test_6:1:7
     |
   1 | let x = a};
     |       ^


Error [EPAR0370005]: expected : -- found '='
    --> test_7:1:7
     |
   1 | let x = a);
     |       ^


Error [EPAR0370005]: expected : -- found '='
    --> test_8:1:7
     |
   1 | let x = a:;
     |       ^


Error [EPAR0370005]: expected : -- found '='
    --> test_9:1:7
     |
   1 | let x = a?;
     |       ^


Error [EPAR0370005]: expected : -- found '='
    --> test_10:1:7
     |
   1 | let x = a=;
     |       ^


Error [EPAR0370005]: expected : -- found '='
    --> test_11:1:7
     |
   1 | let x = a==;
     |       ^


Error [EPAR0370005]: expected : -- found '='
    --> test_12:1:7
     |
   1 | let x = a!;
     |       ^


Error [EPAR0370005]: expected : -- found '='
    --> test_13:1:7
     |
   1 | let x = a!=;
     |       ^


Error [EPAR0370005]: expected : -- found '='
    --> test_14:1:7
     |
   1 | let x = a>;
     |       ^


Error [EPAR0370005]: expected : -- found '='
    --> test_15:1:7
     |
   1 | let x = a>=;
     |       ^


Error [EPAR0370005]: expected : -- found '='
    --> test_16:1:7
     |
   1 | let x = a<;
     |       ^


Error [EPAR0370005]: expected : -- found '='
    --> test_17:1:7
     |
   1 | let x = a<=;
     |       ^


Error [EPAR0370005]: expected : -- found '='
    --> test_18:1:7
     |
   1 | let x = a>;
     |       ^


Error [EPAR0370005]: expected : -- found '='
    --> test_19:1:7
     |
   1 | let x = a..;
     |       ^


